--- a/src/views/calves.handlebars
+++ b/src/views/calves.handlebars
@@ -11,6 +11,7 @@
 <div class="add-page-buttons">
     <button id="newCalfButton" class="add-page-button">Agregar ternero</button>
     <button id="updateCalfButton" class="add-page-button">Modificar ternero</button>
+    <button id="DeleteCalfButton" class="add-page-button">Eliminar ternero</button>
 </div>
 
 <div class="add-page-buttons">
@@ -23,6 +24,9 @@
 
 <div class="hidden" id="newCalfForm">
     {{>calves/calf-form}}
+</div>
+<div class="hidden" id="deleteCalfForm">
+    {{>calves/calf-delete}}
 </div>
 <div class="hidden" id="updateCalfForm">
     {{>calves/calf-update}}
@@ -42,3 +46,4 @@
 <script src="/js/calves/tasksForms.js"></script>
 <script src="/js/calves/updateCalf.js"></script>
 <script src="/js/calves/newCalfForm.js"></script>
+<script src="/js/calves/deleteCalf.js"></script>
