--- a/src/views/corral.handlebars
+++ b/src/views/corral.handlebars
@@ -26,21 +26,29 @@
         <div>
             <p>Corral: {{this.corral}}</p>
         </div>
+        {{#if this.calfCalostro}}
+        <div>
+            <p class="calostro">        
+                Calostrado: {{this.calfCalostro}}
+            </p>
+        </div>
+        {{/if}}
         <div>
             <p class="treatment">        
-                Tratamiento: {{this.treatment}}
+                Tratamiento: {{this.treatment.[0].title}}
             </p>
         </div>
         <div>
             <p>Empieza tratamiento el día: {{formatDate this.startDate}}</p>
         </div>
         <div>
-            <p>Días totales de tratamiento: {{this.duration}}</p>
+            <p>Días totales de tratamiento: {{this.treatment.[0].duration}}</p>
         </div>
-        <div>
-            <p class="medication">        
-                Suministrar por día: {{this.medication}}
-            </p>
+        <div class="medication-container"
+                data-start-date="{{this.startDate}}"
+                data-medication="{{json this.treatment.[0].medication}}">
+
+            <p class="medication"></p>
         </div>
         <div>
             <p>Finaliza tratamiento el día: {{{formatDate this.endDate}}}</p>
@@ -55,10 +63,12 @@
                 <p>Finalizó tratamiento el día: {{{formatDate this.prevEndDate}}}</p>
             </div>
         {{/if}}
+        
         <h2>Este ternero no fue tratado el día de hoy ❌</h2>
         <form action="/calf/treated/{{this._id}}" method="POST">
             <button type="button" class="link-button mark-today-treated" data-id="{{this._id}}">Marcar como tratado hoy</button>
         </form>
+
         <form action="/calf/dead/{{this._id}}" method="POST">
             <button type="button" class="link-button mark-dead-calf" data-id="{{this._id}}">Dar ternero de baja</button>
         </form>
@@ -84,19 +94,27 @@
         </div>
         <div>
             <p class="treatment">        
-                Tratamiento: {{this.treatment}}
+                Tratamiento: {{this.treatment.[0].title}}
             </p>
         </div>
+         {{#if this.calfCalostro}}
+        <div>
+            <p class="calostro">        
+                Calostrado: {{this.calfCalostro}}
+            </p>
+        </div>
+        {{/if}}
         <div>
             <p>Empieza tratamiento el día: {{formatDate this.startDate}}</p>
         </div>
         <div>
-            <p>Días totales de tratamiento: {{this.duration}}</p>
+            <p>Días totales de tratamiento: {{this.treatment.[0].duration}}</p>
         </div>
-        <div>
-            <p class="medication">        
-                Suministrar por día: {{this.medication}}
-            </p>
+        <div class="medication-container"
+                data-start-date="{{this.startDate}}"
+                data-medication="{{json this.treatment.[0].medication}}">
+
+            <p class="medication"></p>
         </div>
         <div>
             <p>Finaliza tratamiento el día: {{{formatDate this.endDate}}}</p>
@@ -111,6 +129,7 @@
                 <p>Finalizó tratamiento el día: {{{formatDate this.prevEndDate}}}</p>
             </div>
         {{/if}}
+        
         <h2>Este ternero ya fue tratado el día de hoy ✔</h2>
         <form action="/calf/dead/{{this._id}}" method="POST">
             <button type="button" class="link-button mark-dead-calf" data-id="{{this._id}}">Dar ternero de baja</button>
@@ -123,3 +142,4 @@
 
 <script src="../js/enfermery/isTreatedForm.js"></script>
 <script src="../js/enfermery/markAsDead.js"></script>
+<script src="/js/enfermery/currentMedication.js"></script>
