--- a/src/views/enfermery/enfermery.handlebars
+++ b/src/views/enfermery/enfermery.handlebars
@@ -10,10 +10,14 @@
 <div class="add-page-buttons">
     <button id="addCalfButton" class="add-page-button">Agregar ternero</button>
     <button id="updateCalfButton" class="add-page-button">Modificar ternero</button>
-    <button id="deleteCalfButton" class="add-page-button">Eliminar ternero</button>
+    <button id="deleteCalfButton" class="hidden add-page-button">Eliminar ternero</button>
+</div>
+
+<div class="add-page-buttons">
     <button id="addCorralButton" class="add-page-button">Agregar corral</button>
     <button id="deleteCorralButton" class="add-page-button">Eliminar corral</button>
 </div>
+
 <div class="add-page-buttons">
     <button id="addTreatmentButton" class="add-page-button">Agregar tratamiento</button>
     <button id="updateTreatmentButton" class="add-page-button">Modificar tratamiento</button>
@@ -61,6 +65,7 @@
 <script src="js/enfermery/calf/updateCalfForm.js"></script>
 <script src="js/enfermery/calf/updateCalf.js"></script>
 <script src="js/enfermery/calf/deleteCalf.js"></script>
+<script src="js/enfermery/treatment/newTreatment.js"></script>
 <script src="js/enfermery/treatment/updateTreatmentForm.js"></script>
 <script src="js/enfermery/treatment/updateTreatment.js"></script>
 <script src="js/enfermery/treatment/deleteTreatment.js"></script>
