--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,11 +1,14 @@
 {{>global/headerlogged}}
 
-<h1>Bienvenido al establecimiento: {{this.user.farmname}}</h1>
+<div class="welcome-button">
+    <h1>Bienvenido al establecimiento: {{this.user.farmname}}</h1>
+</div>
+
 <nav class="">
     <a href="/terneros" class="link-button">Ir a terneros</a>
     <a href="/enfermeria" class="enfermery-button">Ir a enfermería</a>
     <a href="/desleche" class="link-button">Ir a desleche</a>
-    
+    <a href="/buscar-ternero" class="link-button">Buscar ternero 🔎</a>
 </nav>
 
 <div>
