--- a/src/views/partials/calves/calf-form.handlebars
+++ b/src/views/partials/calves/calf-form.handlebars
@@ -11,6 +11,15 @@
       <input type="date" id="birthDate" name="birthDate" required />
     </div>
     <div>
+      <p>Tipo de parto</p>
+      <select name="birthType" id="" required>
+        <option value="" disabled selected>Tipo de parto</option>
+        <option value="1-Normal">1-Normal</option>
+        <option value="2-Asistido">2-Asistido</option>
+        <option value="3-Cesárea">3-Cesárea</option>
+      </select>
+    </div>
+    <div>
       <p>Eliga el sexo</p>
       <select name="gender" id="" required>
         <option value="" disabled selected>Género</option>
