--- a/src/views/deadCalves.handlebars
+++ b/src/views/deadCalves.handlebars
@@ -43,8 +43,9 @@
         </div>
         <div>
             <p class="treatment">        
-            Tratamiento: {{this.treatment}}
+            Tratamiento: {{getTreatment this.treatment}}
             </p>   
+        
             <p>Este ternero murió el día: {{{formatDate this.timeDead}}}</p>
         </div>
         {{#if this.comment}}
