--- a/src/views/partials/enfermery/treatment-form.handlebars
+++ b/src/views/partials/enfermery/treatment-form.handlebars
@@ -4,12 +4,26 @@
     <label for="title">Nombre del tratamiento:</label>
     <input type="text" id="title" name="title" required />
 
-    <label for="medication">Medicamento:</label>
-    <input type="text" id="medication" name="medication" required />
+     <label for="duration">Eliga la Duración (días):</label>
+    <select id="durationSelect" name="duration" required>
+      <option value="" disabled selected>Seleccione...</option>
+      <option value="1">1</option>
+      <option value="2">2</option>
+      <option value="3">3</option>
+      <option value="4">4</option>
+      <option value="5">5</option>
+      <option value="6">6</option>
+      <option value="7">7</option>
+      <option value="8">8</option>
+      <option value="9">9</option>
+      <option value="10">10</option>
+    </select>
 
-    <label for="duration">Duración (días en número):</label>
-    <input type="number" id="duration" name="duration" required />
+    
+    <div id="day-inputs-container">
+    </div>
 
+  
     <input class="form-button" type="submit" value="Guardar tratamiento" />
   </form>
 </div>
