solucion de errores

--- a/src/views/searchCalves.handlebars
+++ b/src/views/searchCalves.handlebars
@@ -16,7 +16,8 @@
         <select id="sortOrder" name="sort" >
             <option value="asc">Ascendente</option>
             <option value="desc">Descendente</option>
-        </select>        
+        </select>
+        <button type="submit" class="link-button dead-calves-link">Buscar</button>        
     </div>
 
     {{#each calves}}
