--- a/src/views/partials/enfermery/calf-form.handlebars
+++ b/src/views/partials/enfermery/calf-form.handlebars
@@ -33,12 +33,17 @@
           <option
             value="{{this._id}}"
             data-duration="{{this.duration}}"
+            data-medication="{{json this.medication}}"
           >{{this.title}}</option>
         {{/each}}
       </select>
     </div>
 
     <div id="infoTreatment">
+      <p>Medicaciones:</p>
+      <input type="text" name="" id="day1Example" readonly />
+      <p>Tratar con:</p>
+      <input readonly id="day1Example"></span>
       <p>Días de tratamiento:</p>
       <input type="number" name="duration" id="duration" readonly />
       <p>Fecha de finalización del tratamiento:</p>
