--- a/src/views/partials/calves/calf-update.handlebars
+++ b/src/views/partials/calves/calf-update.handlebars
@@ -31,7 +31,7 @@
 
     <div>
       <p>Tipo de parto</p>
-      <select name="newBirthType" id="" >
+      <select name="newBirthType" id="">
         <option value="" disabled selected>Tipo de parto</option>
         <option value="1-Normal">1-Normal</option>
         <option value="2-Asistido">2-Asistido</option>
@@ -40,7 +40,7 @@
     </div>
     <div>
       <p>Sexo</p>
-      <select name="newGender" id="" >
+      <select name="newGender" id="">
         <option value="" disabled selected>Género</option>
         <option value="Macho">Macho</option>
         <option value="Hembra">Hembra</option>
@@ -48,15 +48,15 @@
     </div>
     <div>
       <p>Fecha de nacimiento</p>
-      <input type="date" id="newBirthDate" name="birthDate"/>
+      <input type="date" id="newBirthDate" name="birthDate" />
     </div>
     <div>
       <p>Peso</p>
-      <input type="text" id="newWeigh" name="name"  />
+      <input type="text" id="newWeigh" name="calfWeight" />
     </div>
     <div>
       <p>Calostrado</p>
-      <input type="text" id="newCalotrum" name="name"  />
+      <input type="text" id="newCalotrum" name="calfCalostro" />
     </div>
     <input class="form-button" type="submit" value="Actualizar ternero" />
   </form>
