SWEET ALERTG FINISHED

--- a/src/views/calves.handlebars
+++ b/src/views/calves.handlebars
@@ -43,7 +43,9 @@
 </div>
 
 <script src="/js/calves/toggleButtons.js"></script>
-<script src="/js/calves/tasksForms.js"></script>
 <script src="/js/calves/updateCalf.js"></script>
 <script src="/js/calves/newCalfForm.js"></script>
 <script src="/js/calves/deleteCalf.js"></script>
+<script src="/js/task/newTask.js"></script>
+<script src="/js/task/deleteTask.js"></script>
+<script src="/js/task/updateTask.js"></script>
