--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -9,6 +9,7 @@
     <a href="/enfermeria" class="enfermery-button">Ir a enfermería</a>
     <a href="/desleche" class="link-button">Ir a desleche</a>
     <a href="/buscar-ternero" class="link-button">Buscar ternero 🔎</a>
+    <a href="/descargar" class="excel-button mobile-hidden">Descargar informacion en excel</a>
 </nav>
 
 <div>
