--- a/src/views/partials/calves/calf-form.handlebars
+++ b/src/views/partials/calves/calf-form.handlebars
@@ -2,8 +2,12 @@
   <h1>Nuevo Ternero</h1>
   <form id="addCalfForm">
     <div>
-      <p>Nombre del ternero:</p>
+      <p>Caravana del ternero:</p>
       <input type="text" id="name" name="name" placeholder="Ej: A011" />
+    </div>
+    <div>
+      <p>Madre del ternero:</p>
+      <input type="text" id="name" name="mother" placeholder="Opcional, no es necesario cargarlo" />
     </div>
 
     <div>
