--- a/src/views/allReleasedCalves.handlebars
+++ b/src/views/allReleasedCalves.handlebars
@@ -38,6 +38,11 @@
     <div>
     <p class="calf">Nombre del ternero: {{this.name}}</p>
     </div>
+    {{#if this.mother}}
+        <div>
+            <p>Madre del ternero: {{this.mother}}</p>
+        </div>
+    {{/if}}
     <div>
     <p class="gender">Sexo: {{this.gender}}</p>
     </div>
