--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -7,6 +7,7 @@
 <nav class="">
     <a href="/terneros" class="link-button">Ir a terneros</a>
     <a href="/enfermeria" class="enfermery-button">Ir a enfermería</a>
+    <a href="/vacunacion" class="link-button">Ir a vacunación</a>
     <a href="/desleche" class="link-button">Ir a desleche</a>
     <a href="/buscar-ternero" class="link-button">Buscar ternero 🔎</a>
     <a href="/descargar" class="excel-button mobile-hidden">Descargar informacion en excel</a>
